<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns="*"
    android:id="@+id/table"
    >

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="match_parent"
        app:cardElevation="@dimen/login_card_elevation"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/login_bg"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mask_login"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="37sp"
            android:text="@string/app_name"
            android:layout_gravity="bottom"
            android:padding="10dp"
            />





    </android.support.v7.widget.CardView>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_big"
        android:layout_marginLeft="@dimen/login_margin_small"
        android:layout_marginRight="@dimen/login_margin_small"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_usr"
        android:inputType="text"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin_small"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        />

    </android.support.design.widget.TextInputLayout>

    <TableRow
        android:layout_marginTop="@dimen/login_margin_big"
        android:layout_marginBottom="@dimen/login_margin_small"
        android:layout_marginLeft="@dimen/login_margin_small"
        android:layout_marginRight="@dimen/login_margin_small"
        >
        <Button
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/btn_registro"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_register"
            />
        <Button
            app:theme="@style/ButtonAccent"
            android:id="@+id/btn_entrar"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_in"
            />


    </TableRow>





</TableLayout>
